syntax = "proto3";

package user;


option go_package = "/user";

// User Service definition
service UserService {
    // Create a new user
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);

    // Update an existing user
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);

    // Delete a user by ID
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);

    // Get a user by ID
    rpc GetUser (GetUserRequest) returns (GetUserResponse);

    // List all users with their details
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);

    // List all user names only
    rpc ListUserNames (ListUserNamesRequest) returns (ListUserNamesResponse);
}
// User message
message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string password =4;
    int64 phone =5;
}

// Request and Response messages

// Create User
message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    int32 id = 1; 
    string message =2;
}


message UpdateUserRequest {
    User user = 1;
}

message UpdateUserResponse{
    string message =1;
}

message DeleteUserRequest {
    int32 user_id = 1; 
}

message DeleteUserResponse{
    string message =1;
}
message GetUserRequest {
    int32 user_id = 1; 
}

message GetUserResponse {
    User user = 1; 
}

message ListUsersRequest{}

message ListUsersResponse {
    repeated User users = 1; 
}

message ListUserNamesResponse {
    repeated string names = 1;
}
message ListUserNamesRequest{
    int32 method =1;
    int32 wait_time= 2;
}